<resources>
    <string name="app_name">Agenda</string>
    <string name="todo">TODO</string>
    <string name="gabriel">Gabriel</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="vendramini">Vendramini</string>
    <string name="salvar">Salvar</string>

</resources>