<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText android:id="@+id/activity_formulario_aluno_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/nome"
        android:autofillHints="@string/gabriel"
        android:inputType="textCapWords"/>
    <EditText android:id="@+id/activity_formulario_aluno_sobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/sobrenome"
        android:autofillHints="@string/vendramini"
        android:inputType="textCapWords"/>
    <EditText android:id="@+id/activity_formulario_aluno_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/telefone"
        android:importantForAutofill="no"
        android:inputType="phone"/>
    <EditText android:id="@+id/activity_formulario_aluno_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"/>
    <Button android:id="@+id/activity_formulario_aluno_bt_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/salvar"/>

</LinearLayout>